# cmote

./: .gitignore  Cargo.toml  PLAN.md  README.md  bundle-macos.sh  rustfmt.toml
src/: app.rs  bridge.rs  main.rs  secret.rs
src/ssh/: auth.rs  client.rs  hostkey.rs  keyfile.rs  mod.rs  ppk.rs
src/term/: keymap.rs  mod.rs
src/ui/: connect.rs  dialog.rs  mod.rs  selection.rs  terminal.rs
